--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -40,6 +40,21 @@ layout: default
 
     <div class="clearfix">{{ content }}</div>
 
+    <!-- Projects -->
+    {% if page.projects %}
+      <h2>
+        <a href="{{ '/projects/' | relative_url }}" style="color: inherit">My Projects</a>
+      </h2>
+      <div class="projects">
+        {% assign sorted_projects = site.projects | sort: 'importance' %}
+        <div class="row row-cols-1 row-cols-md-3">
+          {% for project in sorted_projects %}
+            {% include projects.liquid %}
+          {% endfor %}
+        </div>
+      </div>
+    {% endif %}
+
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
