--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -46,12 +46,20 @@ layout: default
         <a href="{{ '/projects/' | relative_url }}" style="color: inherit">My Projects</a>
       </h2>
       <div class="projects">
-        {% assign sorted_projects = site.projects | sort: 'importance' %}
-        <div class="row row-cols-1 row-cols-md-3">
-          {% for project in sorted_projects %}
-            {% include projects.liquid %}
-          {% endfor %}
-        </div>
+        <!-- Display categorized projects -->
+        {% for category in page.display_categories %}
+          <a id="{{ category }}" href=".#{{ category }}">
+            <h2 class="category">{{ category }}</h2>
+          </a>
+          {% assign categorized_projects = site.projects | where: 'category', category %}
+          {% assign sorted_projects = categorized_projects | sort: 'importance' %}
+          <!-- Generate cards for each project -->
+          <div class="row row-cols-1 row-cols-md-3">
+            {% for project in sorted_projects %}
+              {% include projects.liquid %}
+            {% endfor %}
+          </div>
+        {% endfor %}
       </div>
     {% endif %}
 
